# metrifox-python

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  example.py  pyproject.toml  requirements-dev.txt  run_test.sh  setup.py
metrifox_sdk/: __init__.py  base.py  checkout.py  client.py  customers.py  exceptions.py  subscriptions.py  types.py  usages.py
test-app/: README.md  app.py  simple_test.py  test.py
tests/: conftest.py  test_client.py
